--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.510.0",
+    "mermaid": "^11.8.1",
     "motion": "^12.12.1",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
